cmake_minimum_required(VERSION 2.6)

PROJECT(STRATEGYLIB)

set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")

set(platform x64)

set(SOURCE_FILES Buy_Strategy.cpp)
set(HEAD_FILES Buy_Strategy.h Strategy.h)
ADD_LIBRARY(strategy STATIC ${SOURCE_FILES} ${HEAD_FILES})

SET(LIBRARY_OUTPUT_PATH ${PROJECT_SOURCE_DIR})
SET_TARGET_PROPERTIES(strategy PROPERTIES OUTPUT_NAME "strategy")
GET_TARGET_PROPERTY (OUTPUT_VALUE strategy OUTPUT_NAME)
MESSAGE (STATUS "This is the strategy OUTPUT_NAME: " ${OUTPUT_VALUE})
